# mcp_servers

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  run.sh  setup.py
src/voice_recorder/: __init__.py  __main__.py  audio_service.py  config.py  recorder.py  server.py  transcriber.py
src/voice_recorder_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
