[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-recorder-mcp"
version = "0.1.0"
description = "MCP server for voice recording and transcription"
readme = "README.md"
requires-python = ">=3.10,<3.12"

[project.scripts]
voice-recorder-mcp = "voice_recorder:main"
