[project]
name = "voice-recorder-mcp"
version = "0.1.0"
description = "MCP server for voice recording and transcription"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"  # Allow Python 3.11 and 3.12
dependencies = [
    "mcp[cli]>=1.2.0",
    "sounddevice>=0.4.6",
    "numpy>=1.20.0,<2.0.0",
    "openai-whisper @ git+https://github.com/openai/whisper.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
voice-recorder-mcp = "voice_recorder:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true